[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scripts/LoginPage.gd" type="Script" id=1]

[node name="LoginPage" type="Control"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1920.0
margin_bottom = 1080.0
color = Color( 0.313726, 0, 0, 1 )

[node name="UserLine" type="LineEdit" parent="."]
margin_left = 645.0
margin_top = 390.0
margin_right = 1195.0
margin_bottom = 476.0
align = 1

[node name="PasswordLine" type="LineEdit" parent="."]
margin_left = 645.0
margin_top = 588.0
margin_right = 1195.0
margin_bottom = 703.0
align = 1
secret = true

[node name="WarningLabel" type="Label" parent="."]
margin_left = 546.0
margin_top = 47.0
margin_right = 1220.0
margin_bottom = 236.0
align = 1

[connection signal="text_entered" from="PasswordLine" to="." method="_on_PasswordLine_text_entered"]
